--- a/index.html
+++ b/index.html
@@ -87,11 +87,12 @@
         </div>
     </div>
 
-    <div class="background">
+    <form class="background">
       <p id="background-description">Change Background</p>
       <input type="text" id="background-input" placeholder="Image URL">
-      <input type="submit" id="background-button" value="Submit">
-    </div>
+      <input type="submit" id="background-submit" value="Submit">
+      <input type="button" id="background-button" value="Default">
+    </form>
 
     <script src="app.js"></script>
   </body>
