--- a/index.html
+++ b/index.html
@@ -14,7 +14,16 @@
   <body>
     <nav class="nav">
       <ul>
-        <li>City</li>
+        <select name="city" class="pull-down">
+          <option>Yokohama</option>
+          <option>Paris</option>
+          <option>Barcelona</option>
+          <option>Zurich</option>
+          <option>Rome</option>
+          <option>Munich</option>
+          <option>Amsterdam</option>
+          <option>Brussels</option>
+        </select>
         <li><a href="settings.html">Settings</a></li>
       </ul>
     </nav>
