--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     <nav class="nav">
       <ul>
         <select name="city" class="pull-down">
-          <option>Yokohama</option>
-          <option>Paris</option>
-          <option>Barcelona</option>
-          <option>Zurich</option>
-          <option>Rome</option>
-          <option>Munich</option>
-          <option>Amsterdam</option>
-          <option>Brussels</option>
+          <option onclick="window.location.reload()">Yokohama</option>
+          <option onclick="window.location.reload()">Paris</option>
+          <option onclick="window.location.reload()">Barcelona</option>
+          <option onclick="window.location.reload()">Zurich</option>
+          <option onclick="window.location.reload()">Rome</option>
+          <option onclick="window.location.reload()">Munich</option>
+          <option onclick="window.location.reload()">Amsterdam</option>
+          <option onclick="window.location.reload()">Brussels</option>
         </select>
-        <li><a href="settings.html">Settings</a></li>
+        <li><a href="settings.html" class="settings">Settings</a></li>
       </ul>
     </nav>
 
