--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mobile.css" media="screen and (max-width: 480px)">
-    <link rel="icon" href="/weather-icon.png" />
+    <link rel="icon" href="http://openweathermap.org/img/wn/02d@2x.png" />
     
   </head>
   <body>
